<resources>
    <string name="app_name">Intro Slider</string>
    <string name="title_activity_welcome">Home Screen</string>

    <string name="title_activity_nav_draw">NavDraw</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Settings</string>

    <string name="importent">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>

    <string name="my_chat">Conversations</string>
    <string name="all">Entire Library</string>
    <string name="category">Categories</string>
    <string name="my_materials">My materials</string>
    <string name="my_fav">My Favorites</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>

    <string name="fragment_tab_home_direct_message_button_label">Select a contact</string>
    <string name="fragment_user_profile_id_label">ID</string>
    <string name="fragment_user_profile_logout_label">logout</string>

    <string name="chat_firebase_appId" translatable="false"></string>
    <string name="chat_firebase_url">https://login-demo-3c273.firebaseio.com/</string>
    <string name="chat_firebase_storage_bucket">gs://login-demo-3c273.appspot.com</string>
</resources>
