<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:id="@+id/grp1" android:checkableBehavior="single" >
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/all" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/icons8_medium_icons_24"
            android:title="@string/category" />
    </group>
    <group android:id="@+id/grp2" android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_materials"
            android:icon="@drawable/icons8_books_24"
            android:title="@string/my_materials" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/my_fav" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/my_chat" />
    </group>
    <group android:id="@+id/grp3" android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>

</menu>